[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marius Cobzarenco", email = "marius.cobzarenco@uipath.com"},
]
dependencies = [
    "torch",
    "fairscale",
    "fire",
    "sentencepiece",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
